--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DALTestSystemDB\DALTestSystemDB.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
+    <ProjectReference Include="..\TestLib\TestLib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
